--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,30 @@
 
 :root {
   --background: #ffffff;
+  --secondary-background: #eeeeee;
+  --border-background: #282C35;
   --foreground: #171717;
+  --text-secondary: #8E96A4;
+  --primary: #2BA666;
 }
 
 @theme inline {
   --color-background: var(--background);
+  --color-secondary-background: var(--secondary-background);
+  --color-border-background: var(--border-background);
   --color-foreground: var(--foreground);
+  --color-primary: var(--primary);
+  --color-text-secondary: var(--text-secondary);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #030712;
+    --secondary-background: #10141E;
     --foreground: #ededed;
+    --border-background: #282C35;
   }
 }
 
