--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,10 @@
 
 :root {
   --background: #ffffff;
-  --secondary-background: #eeeeee;
-  --border-background: #282C35;
+  --secondary-background: #fafafa;
+  --border-background: #bebebe;
   --foreground: #171717;
-  --text-secondary: #8E96A4;
+  --text-secondary: #666a70;
   --primary: #2BA666;
 }
 
@@ -25,7 +25,8 @@
     --background: #030712;
     --secondary-background: #10141E;
     --foreground: #ededed;
-    --border-background: #282C35;
+    --border-background: #333842;
+    --text-secondary: #9298a0;
   }
 }
 
